--- a/kit/package.json
+++ b/kit/package.json
@@ -19,5 +19,8 @@
     "typescript": "^4.7.4",
     "vite": "^4.0.4"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "sass": "^1.57.1"
+  }
 }
